--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
 a {
   display: inline-block;
   text-decoration: none;
+  line-height: 1.3;
   color: azure;
   background-color: #000;
   margin: 20px 20px 20px 50px;
@@ -74,6 +75,7 @@ a:hover {
   color: azure;
   background-color: #000;
   padding: 4px;
+  border-radius: 2px;
 }
 /*
 .bg-video {
